2004-06-03  Ethan Merritt  <merritt@u.washington.edu>

	* term/emf.trm (EMF_linewidth): Force re-evaluation of line
	characteristics when the linewidth changes; otherwise the new width
	is ignored until some other property changes as well.

2004-06-01  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* demo/fillcrvs.dem: Add text to pause -1 prompts.

	* docs/gnuplot.doc (plot datafile using): Document restrictions of
	'using' format-strings.

	* src/datafile.c (valid_format): Check that there's at least one
	actual %lf format in the format string, and no more than 7,
	because the scanf() that uses the format supplies only 7 arguments
	to store data in.
	(plot_option_using): Change error message to reflect new status
	output of valid_format().

2004-05-28  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/getcolor.c (color_components_from_gray): Test gray value for
	being in range [0;1].

2004-05-27  Ethan Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.c (PaletteSetColor): Test for overflow of index
	derived from color ramp calculation. Is this algorithm really correct?
	
2004-05-27  Petr Mikulik  <mikulik@physics.muni.cz>

	* term/post.trm (PS_make_header): Change definition of /pm3dround
	to fix color mapping with 'set palette maxcolors'.

	* src/win/wgraph.c (drawgraph): Change call from rgb255_from_gray() to
	rgb255maxcolors_from_gray(). Fixes color mapping with 'set palette
	maxcolors'.

2004-05-26  Ethan Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.c (PaletteSetColor): Fix off-by-one error in indexing
	color ramp of gray values.

	* src/mouse.c (do_event): Allow font and terminal size information to
	be processed while in multiplot mode. See bug #955081.

2004-05-26  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/getcolor.h src/getcolor.c: New routines rgb1maxcolors_from_gray()
	and rgb255maxcolors_from_gray().

	* term/aquaterm.trm (AQUA_set_color) term/pdf.trm (PDF_set_color):